Fixing width on small screens

--- a/src/styles/Unwrap.module.css
+++ b/src/styles/Unwrap.module.css
@@ -8,6 +8,12 @@
   width: 50rem;
 }
 
+@media screen and (max-width: 1280px) {
+  .col > div {
+    width: 30rem;
+  }
+}
+
 .form {
   display: flex;
   flex-direction: column;
